--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -6041,11 +6041,22 @@ button.close {
 .carousel-caption {
   position: absolute;
   right: 15%;
-  bottom: 20px;
+  bottom: 40px;
   left: 15%;
   z-index: 10;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  color: #fff;
+  text-align: center;
+}
+.carousel-caption p {
+  position: absolute;
+  right: 15%;
+  /* bottom: 20px; */
+  left: 15%;
+  z-index: 10;
+  /* padding-top: 20px;
+  padding-bottom: 20px; */
   color: #fff;
   text-align: center;
 }
